[project]
name = "vertex-lab"
version = "0.1.0"
description = "Vertex Investment Framework Monorepo"
requires-python = ">=3.10"
dependencies = []  # 루트에는 코드가 없으므로 의존성 비워둠

[tool.uv]
# packages 폴더 아래에 있는 애들을 내 식구로 인정한다.
workspace = { members = ["packages/*"] }

[tool.uv.sources]
vertex-forager = { workspace = true }

[tool.ruff]
# 전체 프로젝트에 적용될 린터 설정
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "TCH", "SIM", "PT"]

[tool.ruff.lint.per-file-ignores]
"packages/vertex-forager/tests/**" = ["PT011", "PT012", "PT015", "PT018", "S101", "E501", "I001", "UP006", "UP035", "UP037", "TC002", "TC003", "TC006", "SIM114", "SIM117", "B007", "B009", "B011", "S106", "S108"]
"packages/vertex-forager/src/vertex_forager/writers/duckdb.py" = ["E501", "S608"]
"packages/vertex-forager/src/vertex_forager/writers/memory.py" = ["E501", "TC001"]
"packages/vertex-forager/src/**" = ["E501", "I001", "TC001", "TC002", "TC003", "TC005", "TC006", "UP035", "UP037", "UP045", "UP007", "UP006", "S110", "S311", "S105", "B008", "B010", "B027", "B904", "B905", "B023", "SIM102", "SIM105", "SIM108", "SIM113", "SIM118"]
"packages/vertex-forager/src/vertex_forager/providers/yfinance/router.py" = ["S301"]
"packages/vertex-forager/src/vertex_forager/routers/errors.py" = ["S301"]
"packages/vertex-forager/src/vertex_forager/providers/sharadar/client.py" = ["S608"]
"packages/vertex-forager/examples/**" = ["UP035"]



[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: integration tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
exclude = "packages/vertex-forager/tests"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.98.0",
    "ruff==0.15.6",
    "mypy>=1.11.1",
    "vertex-forager",
    "pandas-stubs>=2.3.3.260113",
    "types-tqdm>=4.67.3.20260205",
    "types-psutil>=7.2.2.20260130",
]

[tool.hypothesis]
max_examples = 50
deadline = 200
