[project]
name = "vertex-lab"
version = "0.1.0"
description = "Vertex Investment Framework Monorepo"
requires-python = ">=3.10"
dependencies = []  # 루트에는 코드가 없으므로 의존성 비워둠

[tool.uv]
# packages 폴더 아래에 있는 애들을 내 식구로 인정한다.
workspace = { members = ["packages/*"] }

[tool.uv.sources]
vertex-forager = { workspace = true }

[tool.ruff]
# 전체 프로젝트에 적용될 린터 설정
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S", "TCH", "SIM", "PT", "RUF", "C4"]

[tool.ruff.lint.per-file-ignores]
# Tests: keep S101 and TC002/TC003/TC006 for pytest asserts and type-checking imports
"packages/vertex-forager/tests/**" = ["S101", "TC002", "TC003", "TC006"]
"packages/vertex-forager/src/vertex_forager/writers/duckdb.py" = ["E501", "S608", "S110"]
"packages/vertex-forager/src/vertex_forager/writers/memory.py" = ["E501", "TC001"]
"packages/vertex-forager/src/**" = ["E501", "I001", "TC001", "TC002", "TC003", "TC005", "TC006", "UP035", "UP037", "UP045", "UP007", "UP006", "B008", "B010", "B027", "B904", "B905", "B023", "SIM102", "SIM105", "SIM108", "SIM113", "SIM118", "W", "RUF", "C4"]
"packages/vertex-forager/src/vertex_forager/providers/yfinance/router.py" = ["S301"]
"packages/vertex-forager/src/vertex_forager/routers/errors.py" = ["S301"]
"packages/vertex-forager/src/vertex_forager/providers/sharadar/client.py" = ["S608"]
"packages/vertex-forager/src/vertex_forager/core/retry.py" = ["S311"]
"packages/vertex-forager/src/vertex_forager/core/pipeline.py" = ["S110"]
"packages/vertex-forager/src/vertex_forager/utils.py" = ["S110"]
"packages/vertex-forager/src/vertex_forager/cli.py" = ["S311", "S110"]
"packages/vertex-forager/src/vertex_forager/logging/constants.py" = ["S105"]



[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: integration tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
exclude = "packages/vertex-forager/tests"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.98.0",
    "ruff==0.15.6",
    "mypy>=1.11.1",
    "vertex-forager",
    "pandas-stubs>=2.3.3.260113",
    "types-tqdm>=4.67.3.20260205",
    "types-psutil>=7.2.2.20260130",
]

[tool.hypothesis]
max_examples = 50
deadline = 200
